<resources>
    <string name="app_name">SchoolApp</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="titleTipoDoc">Tipo de documento</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_notas">Notas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_calificaciones">Calificaciones</string>
    <string name="menu_tesoreria">Tesorería</string>
    <string name="menu_matricula">Matrícula</string>
    <string name="menu_encuentas">Encuestas</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_mensajes">Mensajes</string>
    <string name="navigation_calendario">Calendario</string>
    <string name="navigation_noticias">Noticias</string>
    <string name="navigation_perfil">Perfil</string>
    <string name="tab_noticias_todas">Todas</string>
    <string name="tab_noticias_circulares">Circulares</string>
    <string name="tab_noticias_populares">Más populares</string>
    <string name="tab_noticias_favoritas">Favoritas</string>
    <string-array name="array_forget">
        <item>Recuperar contraseña</item>
        <item>¿Has olvidado tu usuario?</item>
    </string-array>
    <string-array name="array_opciones_comentario">
        <item>Eliminar</item>
        <item>Cancelar</item>
    </string-array>
    <string name="error_400">Ingresa el texto de busqueda.</string>
    <string name="error_200">Ingresa el texto de busqueda.</string>
    <string name="descargando_archivo">Descargando archivo.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_escuela">Busca tu escuela</string>
    <string name="ingresa_escuela">Ingresa tu escuela</string>
    <string name="remember_me">Recordarme</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="forget_user">¿Has olvidado tu usuario?</string>
    <string name="forget_login">¿Olvidaste como ingresar?</string>
    <string name="logout">Cerrar sesión</string>
    <string name="ingrese_escuela">Ingrese la escuela</string>
    <string name="ingrese_usuario">Ingrese el usuario</string>
    <string name="ingrese_clave">Ingrese la contraseña</string>
    <string name="sin_conexion">Sin conexión a internet</string>
    <string name="title_activity_detalle_noticia">DetalleNoticiaActivity</string>
    <string name="photos">fotos</string>
    <string name="crear_escuela">Registrar escuela</string>
    <string name="action_search">Buscar</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="days">días</string>
    <string name="weeks">semanas</string>
    <string name="months">meses</string>
    <string name="years">años</string>
    <string name="day">día</string>
    <string name="week">semana</string>
    <string name="month">mes</string>
    <string name="year">año</string>
    <string name="ago">Hace</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="today">Hoy</string>
    <string name="error_webview">Error al cargar la página</string>
    <string name="error_conexion">Sin conexión a internet</string>
    <string name="flg_day">1</string>
    <string name="flg_week">2</string>
    <string name="flg_month">3</string>
    <string name="flg_year">4</string>
    <string name="cargando">Cargando…</string>
    <string name="title_dialog_dashboard">S. Potenciador \'Dashboard padres\'</string>
    <string name="desc_dialog_dashboard">Da un vistazo de manera resumida a todas las funciones en una sola pantalla.</string>
    <string name="cerrar">Cerrar</string>
    <string name="cerrarsession">Cerrar sesión</string>
    <string name="title_dialog_noticia">S. Potenciador \'Noticias\'</string>
    <string name="desc_dialog_noticia">Mantén informados a todos tus colaboradores, padres de familia y estudiantes de las noticias más importantes de tu institución y llévala a un siguiente nivel.</string>
    <string name="sin_resultado">No se ha encontrado resultados</string>
    <string name="filtrar">Filtrar</string>
    <string name="aceptar">Aceptar</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="cancelar">Cancelar</string>
    <string name="filtro">Filtro:</string>
    <string name="filtro_tipo_noticia">Tipo de noticia:</string>
    <string name="filtro_anio">Año:</string>
    <string name="filtro_mes">Mes:</string>
    <string name="empty_noticia_todas">Aun no se ha publicado ninguna noticia.</string>
    <string name="empty_noticia_popular">Aun no hay noticias populares.</string>
    <string name="empty_noticia_favorita">No has marcado ninguna noticia como favorita.</string>
    <string name="empty_noticia_circular">Aun no se han publicado noticias circulares</string>
    <string name="ingresa_documento">Ingresa tu nro. de documento</string>
    <string name="title_forget_user">¿Olvidaste tu usuario?</string>
    <string name="desc_forget_user">Te enviaremos un correo con tu usuario</string>
    <string name="enviar">Enviar</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_nro_doc">Ingrese el nro. de documento</string>
    <string name="success_envio_usuario">Te enviamos un correo con tu usuario</string>
    <string name="error_obtener_datos">No pudimos obtener tus datos, comunícate con el colegio para solucionar tu problema</string>
    <string name="correo_dni_invalid">No se encontró información !</string>
    <string name="error_nro_doc_no_registrado">El nro. de documento no se encuentra registrado</string>
    <string name="error_correo_no_registrado">No tienes un correo registrado, no podemos enviarte tu usuario, comunícate con el colegio para solucionar tu problema</string>
    <string name="error_general">Ocurrió un error</string>
    <string name="desc_recover_password">Te enviaremos un enlace para que cambies tu contraseña.</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="validate_email">Ingresa un correo válido.</string>
    <string name="title_recover_pasword">Recuperar contraseña</string>
    <string name="error_no_estas_registrado">No estas registrado en la plataforma</string>
    <string name="error_anp">Acción no permitida</string>
    <string name="error_no_escuela">No existe la escuela</string>
    <string name="success_envio_correo">Te enviamos un correo para restablecer tu clave</string>
    <string name="ingrese_correo">Ingrese el correo</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="campo_requerido">Este campo es necesario</string>
    <string name="intro_primera">Smiledu, plataforma integral de gestión de escuelas</string>
    <string name="intro_segunda">Padres conectados a las escuelas</string>
    <string name="intro_tercera">Promotores siempre informados de su escuela</string>
    <string name="intro_cuarta">Secretarias realizando pagos y cobranzas</string>
    <string name="intro_quinta">Docentes con notas actualizadas</string>
    <string name="intro_desc_primera">Conecta a los padres con el aprendizaje de sus hijos y organiza todos los procesos de tu institución.</string>
    <string name="intro_desc_segunda">Siempre informados del avance académico de sus hijos y comunicándose con los docentes, en todo momento.</string>
    <string name="intro_desc_tercera">Controla toda la información de tu escuela de manera rápida y eficaz desde donde estés, con un click.</string>
    <string name="intro_desc_cuarta">Registra los ingresos y egresos, genera compromisos y entrega reportes dando el mejor servicio.</string>
    <string name="intro_desc_quinta">Ingresa asistencias y notas consultándolas de manera fácil y rápida. ¡Olvídate de las dobles labores!</string>
    <string name="desear_crear_escuela">¿Deseas registrar tu escuela gratis?</string>
    <string name="splash_screen_eslogan">Bienvenido a smiledu</string>
    <string name="powered_smiledu">Powered by Smiledu</string>
    <string name="version">Versión</string>
    <string name="otra_conexion">O conectar con</string>
    <string name="informacion">Información</string>
    <string name="no_disponible">No disponible por ahora</string>
    <string name="no_disponible_message">¡Estamos trabajando para traerte esta opción lo más pronto posible!</string>
    <string name="no_title_escuela">Busca tu escuela</string>
    <string name="no_desc_escuela">Primero tienes que buscar tu escuela para poder acceder a esta opción</string>
    <string name="no_title_google">Ingresar con Google</string>
    <string name="no_title_outlook">Ingresar con Outlook</string>
    <string name="no_title_facebook">Ingresar con Facebook</string>
    <string-array name="meses_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string name="empty_noticia_title">Busca e ingresa a tu escuela</string>
    <string name="empty_noticia_desc">Smiledu necesita que busques y encuentres tu escuela para continuar con el ingreso. Consejo: Usa el Wi-Fi para ahorrar datos</string>
    <string name="empty_no_noticia_title">No se encontraron resultados para : </string>
    <string name="empty_no_noticia_desc">Verifica que todo esté bien escrito</string>
    <string name="no_connection_title">Sin conexión a internet</string>
    <string name="no_connection_desc">El sistema está fuera de línea. Por favor, revisa tu conexión a internet y vuelve a intentarlo.</string>
    <string name="reintentar">Reintentar</string>
    <string name="requerido">Requerido*</string>
    <string name="escuela">Escuela</string>
    <string name="terminos_condiciones"><![CDATA[Haciendo click en \'ingresar\', estoy de acuerdo con <b>Términos y condiciones</b> de Smiledu, y <b>Políticas de privacidad</b>]]></string>
    <string name="title_activity_noticia">NoticiaActivity</string>
</resources>