<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    tools:context=".login.view.LoginActivity"
    android:focusableInTouchMode="true">

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone"
        android:progressDrawable="@drawable/circular_progress_bar" />

    <View
        android:id="@+id/cortina_login_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dcffffff"
        android:elevation="9dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/email_login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/toolbar_login_framelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.PopupOverlay"
                android:background="@color/colorWhite"
                android:fitsSystemWindows="true">

                <include
                    android:id="@+id/toolbar_login"
                    layout="@layout/toolbar_login"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginBottom="28dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usurio_login_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomInputFilledBox">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/usuario_login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textSize="17sp"
                        style="@style/CustomEditTextFilledBoxDense"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_login_textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    style="@style/CustomInputFilledBox">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_login_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:textSize="17sp"
                        style="@style/CustomEditTextFilledBoxDense"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/enlaces_login_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="12dp"
                    android:text="@string/recover_password"
                    android:textColor="@color/colorTextDisabled"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/ingresar_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/button_login_disabled"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:enabled="true"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    style="?android:textAppearanceSmall"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2.5"
                        android:layout_gravity="center_vertical"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="center_horizontal"
                        android:text="@string/otra_conexion"
                        android:textColor="@color/divider" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2.5"
                        android:layout_gravity="center_vertical"
                        android:background="@color/divider" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/google_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@mipmap/ic_google"/>

                    <ImageButton
                        android:id="@+id/outlook_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@mipmap/ic_outlook"/>

                    <ImageButton
                        android:id="@+id/facebook_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@mipmap/ic_facebook"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/terminos_politicas_login_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>